# CraftingInterpreters.swift

./: .clangd  .gitignore  Package.swift  README.md  build.sh
Sources/Lox/: AstPrinter.swift  Environment.swift  Expr.swift  Interpreter.swift  Lox.swift  LoxCallable.swift  LoxClass.swift  LoxFunction.swift  LoxInstance.swift  Parser.swift  Resolver.swift  RuntimeError.swift  Scanner.swift  Stmt.swift  Token.swift  TokenType.swift
Sources/Tool/: GenerateAst.swift
Tests/: classInitReturn.lox  sayHi.lox
clox/: .gitignore  CMakeLists.txt
clox/src/: chunk.c  compiler.c  debug.c  main.c  scanner.c  value.c  vm.c
slox/: .gitignore
slox/Sources/Lox/: Lox.swift  NativeFunctions.swift  Parser.swift  Return.swift
slox/Sources/Tool/: GenerateAst.swift
slox/Tests/: fibonacci.lox  fibonacciWithFunctions.lox  localFunction.lox  simple.lox
slox/Tests/CraftingInterpretersTests/: CraftingInterpretersTests.swift
